k8s/base/message-delivery-service.yaml
---
# Message Delivery
apiVersion: v1
kind: Service
metadata:
  name: message-delivery
spec:
  selector:
    app.kubernetes.io/name: message-delivery
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-delivery-deployment
  labels:
    scheduling.messenger/spot: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: message-delivery
  template:
    metadata:
      labels:
        app.kubernetes.io/name: message-delivery
    spec:
      containers:
        - name: message-delivery-container
          image: message-delivery:latest
          ports:
            - containerPort: 8081
